# api/rest/app/main.php
@@ -10,65 +10,7 @@ require_once(__DIR__."/include.php");
  * )
  */
 
-/**
- * @OA\Put(
- *     path="/users/{id}",
- *     summary="Updates a user",
- *     @OA\Parameter(
- *         description="Parameter with mutliple examples",
- *         in="path",
- *         name="id",
- *         required=true,
- *         @OA\Schema(type="string"),
- *         @OA\Examples(example="int", value="1", summary="An int value."),
- *         @OA\Examples(example="uuid", value="0006faf6-7a61-426c-9034-579f2cfcfa83", summary="An UUID value."),
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="OK"
- *     )
- * )
- */
 
-/**
- * @OA\Post(
- *     path="/users",
- *     summary="Adds a new user - with oneOf examples",
- *     @OA\RequestBody(
- *         @OA\MediaType(
- *             mediaType="application/json",
- *             @OA\Schema(
- *                 @OA\Property(
- *                     property="id",
- *                     type="string"
- *                 ),
- *                 @OA\Property(
- *                     property="name",
- *                     type="string"
- *                 ),
- *                 @OA\Property(
- *                     property="phone",
- *                     oneOf={
- *                     	   @OA\Schema(type="string"),
- *                     	   @OA\Schema(type="integer"),
- *                     }
- *                 ),
- *                 example={"id": "a3fb6", "name": "Jessica Smith", "phone": 12345678}
- *             )
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="OK",
- *         @OA\JsonContent(
- *             oneOf={
- *                 @OA\Schema(ref="#/components/schemas/Result"),
- *                 @OA\Schema(type="boolean")
- *             }
- *         )
- *     )
- * )
- */
 
 /**
  * @OA\Schema(
@@ -85,4 +27,4 @@ require_once(__DIR__."/include.php");
  * )
  */
 
- echo $_SERVER['REDIRECT_URL'];
+handleRequest();
